--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,7 @@
 site_name: pyjanitor documentation
 site_url: https://pyjanitor-devs.github.io/pyjanitor
 
-docs_dir: mkdocs/
+docs_dir: docs/
 
 theme:
   name: "material"
