--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -74,16 +74,16 @@ jobs:
           python -m ipykernel install --user --name pyjanitor-examples
           make docs
 
-      # - name: Deploy website
-      #   uses: peaceiris/actions-gh-pages@v3
-      #   with:
-      #     # https://github.com/peaceiris/actions-gh-pages#%EF%B8%8F-set-personal-access-token-personal_token
-      #     personal_token: ${{ secrets.GHPAGES_TOKEN }}
-      #     publish_dir: ./docs/_build/html
-      #     publish_branch: gh-pages
-      #     # destination_dir: manuscript
-      #     allow_empty_commit: false
-      #     keep_files: false
-      #     force_orphan: true
-      #     enable_jekyll: false
-      #     disable_nojekyll: false
+      - name: Deploy website
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          # https://github.com/peaceiris/actions-gh-pages#%EF%B8%8F-set-personal-access-token-personal_token
+          personal_token: ${{ secrets.GHPAGES_TOKEN }}
+          publish_dir: ./site
+          publish_branch: gh-pages
+          # destination_dir: manuscript
+          allow_empty_commit: false
+          keep_files: false
+          force_orphan: true
+          enable_jekyll: false
+          disable_nojekyll: false
