--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -32,3 +32,9 @@ repos:
   rev: 0.5.0
   hooks:
     - id: nbstripout
+- repo: https://github.com/nbQA-dev/nbQA
+  rev: 1.1.1
+  hooks:
+    - id: nbqa-black
+    - id: nbqa-isort
+    - id: nbqa-flake8
