--- a/environment-dev.yml
+++ b/environment-dev.yml
@@ -5,6 +5,8 @@ channels:
 dependencies:
   - python=3.9
   - pyjanitor>=0.22.0
+  - black=22.1.0
+  - nbqa=1.3.0
   - ipykernel
   - jupyter
   - jupyterlab
